# =============================================================================
# Samples - Example applications
# =============================================================================

# Basic triangle with camera controls
add_subdirectory(Triangle)

# Textured quad with texture sampling
add_subdirectory(TexturedQuad)

# 3D cube with depth buffer and lighting
add_subdirectory(Cube3D)

# Compute shader demo with procedural texture
add_subdirectory(ComputeDemo)

# Model viewer - demonstrates integrated Resource/Scene/Render pipeline
add_subdirectory(ModelViewer)
